# trouv-

./: .env.example  .env.local  .gitignore  .vercelignore  ENRICHMENT.md  README.md  index.html  package-lock.json  package.json  preview.html  screenshot_all.cjs  screenshot_links.cjs  screenshot_pages.cjs  vercel.json  vite.config.ts
.claude/: launch.json  settings.json
.clone-cache/: clone_rendered.html  clone_text.md
.clone-cache/clone_css/: index.css
api/: admin.ts  cadastre-match.ts  devices.ts  dvf.ts  enrich-background.ts  enrich-crew.ts  enrich.ts  search.ts  track-ip.ts  tsconfig.json
api/_lib/: ai-enrichment.ts  cors.ts  dedup.ts  geminiEnrichment.ts  mistralEnrichment.ts  stripe.ts  subscriptions.ts  supabase.ts
api/admin/: create-user.ts  logs.ts  metrics.ts  stripe.ts  user-history.ts  users.ts
api/stripe/: checkout.ts  portal.ts  subscription.ts  webhook.ts
backend/: .env.example  .gitignore  package-lock.json  package.json
backend/src/: index.ts
enrichment-service/: .env.example  Dockerfile  pyproject.toml
enrichment-service/scripts/: e2e_random_contacts.py
enrichment-service/src/enrichment_service/: crew.py  db.py  main.py  schemas.py  settings.py
enrichment-service/src/enrichment_service/tools/: search_tools.py
enrichment-service/tests/: conftest.py  test_api_integration.py  test_tools.py
public/: cgu.html  site.webmanifest
scripts/: rne-ingest.ts  setup-stripe-live.mjs  setup.sh  sirene-ingest.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
supabase/: README.md  prospects.sql  record_login.sql  schema.sql
(+105 files in other folders)
