[project]
name = "enrichment-service"
version = "0.1.0"
description = "Microservice CrewAI d'enrichissement des fiches contacts (trouvé!)"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.100",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
    "sse-starlette>=3.4.5",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enrichment_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
